--- a/youtubeWatchHistoryProject/index.html
+++ b/youtubeWatchHistoryProject/index.html
@@ -138,7 +138,7 @@
                                         normalLoad(jsonData);
                                     }
                                 } catch(error){
-                                fileContent.textContent = "Erro, não é um json";
+                                fileContent.textContent = "Invalid file";
                                 console.error("erro",error);
                                 }
                             };
